# PhysMent---An-Interactive-Approach-For-LLM-Reasoning-In-Physics-Problems

./: .env  .env.example  .gitignore  AgentClass.py  BUGS.md  BUG_FIXES_AND_PROGRESS.md  BUG_FIXES_COMPLETED.md  CLAUDE.md  DOCUMENTATION_INDEX.md  Data.py  Experiment.py  FULL_SYSTEM_VALIDATION_REPORT.md  LICENSE  MUJOCO_LOG.TXT  QUICK_START.md  README.md  SCORING_SYSTEM_TEST_RESULTS.md  Scene.py  Simulator.py  config.py  datavisualizer.py  experimentslog_151_20250823_152852_OpenAIAgent.txt  experimentslog_151_20250824_195822_OpenAIAgent.txt  experimentslog_151_20250824_200350_LlamaAgent.txt  experimentslog_151_20260110_151357_OpenAIAgent.txt  experimentslog_151_20260110_161959_OpenAIAgent.txt  experimentslog_Scene_1_20260110_131643.txt  main.py  migrate_old_scenes.py  pyproject.toml  requirements.txt  scene_json.txt  scene_xml.txt  scenesorter.py  tokenchecker.py  validate_answers.py  xmlchecker.py
OldScenes/Scene 65/: scene65.json
OldScenes/Scene 75/: scene75.json
OldScenes/Scene 76/: scene76.json
OldScenes/Scene2/: scene2.json
OldScenes/Scene201/: scene201.json
OldScenes/Scene202/: scene202.json
OldScenes/Scene203/: scene203.json
OldScenes/Scene204/: scene204.json
Scenes/Scene10/: scene10.json  scene10.xml
Scenes/Scene100/: scene100.json  scene100.xml
Scenes/Scene101/: scene101.json  scene101.xml
Scenes/Scene102/: scene102.json  scene102.xml
Scenes/Scene103/: scene103.json  scene103.xml
Scenes/Scene104/: scene104.json  scene104.xml
Scenes/Scene105/: scene105.json  scene105.xml
Scenes/Scene106/: scene106.json  scene106.xml
Scenes/Scene107/: scene107.json  scene107.xml
Scenes/Scene108/: scene108.json  scene108.xml
Scenes/Scene109/: scene109.json  scene109.xml
Scenes/Scene11/: scene11.json  scene11.xml
Scenes/Scene110/: scene110.json  scene110.xml
Scenes/Scene111/: scene111.json  scene111.xml
TestResults/: manual_grading_summary.csv
(+6980 files in other folders)
