[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physment"
version = "1.0.0"
description = "An interactive physics-reasoning benchmark for evaluating large language models in MuJoCo simulation environments."
readme = "README.md"
requires-python = ">=3.9,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Joseph Chan" },
    { name = "Utkarsh Jha" },
    { name = "Xiyin Yang" },
    { name = "Abhinav Jarajapu" },
    { name = "Anik Sahai" },
    { name = "Eddie Hu" },
    { name = "Robin Jeshua Deepak" },
    { name = "Stefano Saravalle" },
    { name = "Aditya Shah" },
]
keywords = ["benchmark", "physics", "reasoning", "llm", "mujoco", "agents"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24.0",
    "mujoco==3.3.3",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "together>=1.0.0",
    "google-generativeai>=0.3.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "backoff>=2.2.1",
]

[project.urls]
Repository = "https://github.com/DRJCompSciWiz/PhysMent---An-Interactive-Approach-For-LLM-Reasoning-In-Physics-Problems"

[project.scripts]
physment = "main:main"

# This project is a flat collection of top-level modules (no package directory),
# so the modules are listed explicitly rather than relying on auto-discovery.
[tool.setuptools]
py-modules = ["main", "config", "AgentClass", "Data", "Experiment", "Scene", "Simulator"]
